namespace Constants.Animations
{
    public static class AnimatorConsants
    {
        public static string IsIdle = "isIdle";
        public static string IsWalking = "isWalking";
        public static string IsRunning = "isRunning";
        public static string IsJumping = "isJumping";
        public static string IsFalling = "sFalling";
        public static string Speed = "speed";
    }
}